<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_sunny"
        android:fitsSystemWindows="true"
        tools:context="com.manutastic.weatheriffic.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="0dp">

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ebebeb"
                android:textSize="110sp"
                tools:text="72°" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_temp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-20dp"
                android:textColor="#ebebeb"
                android:textSize="20sp"
                tools:text="City, State" />

            <!-- Highlights -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/location"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="16dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/high_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textSecondary"
                            android:textSize="30sp"
                            tools:text="74°" />

                        <TextView
                            android:layout_width="55dp"
                            android:layout_height="wrap_content"
                            android:text="@string/high_temp"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/textSecondary"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/condition_icon"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_sun" />

                        <TextView
                            android:id="@+id/condition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            tools:text="Sunny" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/low_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textSecondary"
                            android:textSize="30sp"
                            tools:text="56°" />

                        <TextView
                            android:layout_width="55dp"
                            android:layout_height="wrap_content"
                            android:text="@string/low_temp"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/textSecondary"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Hourly Forecast -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/card_view"
                android:layout_gravity="center"
                android:layout_marginTop="-40dp"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="16dp"
                card_view:cardUseCompatPadding="true"></android.support.v7.widget.CardView>

            <!-- Details -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_view2"
                android:layout_gravity="center"
                android:layout_marginTop="-40dp"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="16dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_sun_set_rise" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/sunrise"
                            android:textAllCaps="true" />
                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:textStyle="bold"
                            tools:text="6:47 AM" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/sunset"
                            android:textAllCaps="true" />
                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            tools:text="6:33 AM" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_humidity" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/humidity"
                            android:textAllCaps="true" />
                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            tools:text="66%" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_pressure" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/pressure"
                            android:textAllCaps="true" />
                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            tools:text="1005 hPa" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_visibility" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/visibility"
                            android:textAllCaps="true" />
                        <TextView
                            android:id="@+id/visibility"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            tools:text="10 mi" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_wind" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/wind"
                            android:textAllCaps="true" />
                        <TextView
                            android:id="@+id/wind_dir"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:textStyle="bold"
                            tools:text="NE" />
                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            tools:text="12.5 mph" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Daily Forecast -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/card_view3"
                android:layout_gravity="center"
                android:layout_marginTop="-40dp"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="16dp"
                card_view:cardUseCompatPadding="true">

            </android.support.v7.widget.CardView>

            <!-- Credit -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_view4"
                android:text="@string/data_credit"
                android:textColor="#eeeeee"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="-10dp"
                android:alpha="0.5"/>

        </RelativeLayout>
    </ScrollView>
    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/gradient_fade"
        android:layout_below="@id/appbar"/>
    <android.support.v7.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#449FFC"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
</RelativeLayout>